# ShaderCacheBuild

./: .gitignore  CMakeLists.txt  LICENSE  build.bat
src/: main.cpp  shadercache_imp.h  shadercachexml_imp.h
